# gpio-control-rig

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
ci/: check_env.sh  get_package_version.sh
gpio_control_rig/: __main__.py  config.py  main.py  utils.py
gpio_control_rig/01_01/: __main__.py
gpio_control_rig/02_01/: __main__.py
gpio_control_rig/03_01/: __main__.py
gpio_control_rig/03_02/: __main__.py
gpio_control_rig/04_01/: __main__.py
gpio_control_rig/05_01/: __main__.py
src/gpio_control_rig/: __init__.py  config.py  main.py  utils.py
src/gpio_control_rig/01_01/: __main__.py
src/gpio_control_rig/02_01/: __main__.py
src/gpio_control_rig/02_02/: __main__.py
src/gpio_control_rig/03_01/: __main__.py
src/gpio_control_rig/03_02/: __main__.py
src/gpio_control_rig/04_01/: __main__.py
src/gpio_control_rig/05_01/: __main__.py
test/unit/: test_gpio_stub.py
