[tool.poetry]
name = "gpio-control-rig"
version = "0.1.1"
description = "raspberry pi gpio control rig script suite"
authors = ["Russell Jungwirth"]
readme = "README.md"
repository = "https://github.com/RussellJungwirth/gpio-control-rig"
keywords = []
packages = [
    { include = "gpio-control-rig" }
]

[tool.poetry.dependencies]
python = ">=3.10.1,<4.0"
"RPi.GPIO" = "^0.7.1"
gpiozero = "^2.0"
# numpy = "<=1.21.4"
# cython = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.991"
flake8 = "^4.0.1"
pytest = "^6.2.5"
ptvsd = "^4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
mypy_path = "./gpio_control_rig"
ignore_missing_imports = true
warn_unused_ignores = true
allow_empty_bodies = true
disallow_untyped_calls = true
allow_redefinition = true
warn_no_return = false

[tool.black]
line-length = 128

